--- a/ramdisk/init.holiday.rc
+++ b/ramdisk/init.holiday.rc
@@ -249,30 +249,25 @@ on post-fs-data
     setprop net.tcp.buffersize.edge    4096,174760,1572864,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4096,174760,1572864,4096,8760,11680
     setprop net.tcp.buffersize.lte     4096,221184,3461120,4096,221184,3461120
-    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
     setprop net.tcp.buffersize.wimax   4096,221184,524288,4096,16384,110208
 
 # Services start here
 
 # for USB internet sharing
-# service udhcpd /system/bin/udhcpd
-#     disabled
-#     oneshot
+service udhcpd /system/bin/udhcpd
+oneshot
 
 # bugreport is triggered by the KEY_VOL-UP and KEY_VOL-DOWN keycodes
 service bugreport /system/bin/dumpstate -d -v -o /sdcard/bugreports/bugreport
-    disabled
     oneshot
     keycodes 114 115
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     class main
-    disabled
     oneshot
 
 service dmagent /system/bin/dmagent -N
@@ -280,20 +275,18 @@ service dmagent /system/bin/dmagent -N
     user root
     group radio cache inet misc
 
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes \
-        --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download \
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes
+        --tosleep 50000 --baudrate 3000000 --use_baudrate_for_download
         --patchram /system/vendor/firmware/bcm4330.hcd \
         --scopcm=0,0,0,0,0,0,0,3,3,0 /dev/ttyHS0
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 
 service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     socket wpa_wlan0 dgram 660 wifi wifi
     oneshot
-    disabled
 
 service htcbatt /system/bin/htcbatt
     class main
@@ -301,12 +294,10 @@ service htcbatt /system/bin/htcbatt
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service kickstart /system/bin/qcks l
@@ -316,12 +307,10 @@ service kickstart /system/bin/qcks l
 service modem /system/xbin/wireless_modem
     user system
     group system radio
-    disabled
 
-service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
+service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp
     class main
     user root
-    disabled
 
 service mpld /system/bin/mpld
     class main
@@ -333,17 +322,14 @@ service netmgrd /system/bin/netmgrd
 
 service netsharing_on /system/bin/netsharing net on
     class main
-    disabled
     oneshot
 
 service netsharing_off /system/bin/netsharing net off
     class main
-    disabled
     oneshot
 
 service netsharing_pass /system/bin/netsharing net_pass on
     class main
-    disabled
     oneshot
 
 service qmuxd /system/bin/qmuxd
@@ -355,11 +341,9 @@ service qmiproxy /system/bin/qmiproxy
     class main
     user radio
     group radio
-    disabled
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p25 /dev/block/mmcblk0p26 NULL NULL /dev/block/mmcblk0p27 /dev/block/mmcblk0p28 /dev/block/mmcblkp20
     user root
-    disabled
 
 service ril-daemon /system/bin/rild
     class main
@@ -372,7 +356,6 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c /data/mis
     user root
     group wifi inet
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 
 service zchgd_offmode /system/bin/zchgd -pseudooffmode
